--- a/snippets/product-variant-picker.liquid
+++ b/snippets/product-variant-picker.liquid
@@ -11,19 +11,47 @@
 {% endcomment %}
 {%- unless product.has_only_default_variant -%}
   <variant-radios
-    id="variant-radios-{{ section.id }}"
     class="no-js-hidden"
     data-section="{{ section.id }}"
     data-url="{{ product.url }}"
-    {% if update_url == false %}
-      data-update-url="false"
-    {% endif %}
     {{ block.shopify_attributes }}
   >
     {%- for option in product.options_with_values -%}
       <fieldset class="js product-form__input {% unless forloop.first %} hidden {% endunless %}">
         <legend class="form__label">{{ option.name }}</legend>
-        {% render 'product-variant-options', product: product, option: option, block: block %}
+        {%- if forloop.first -%}
+          {%- for value in option.values -%}
+            <input
+              type="radio"
+              id="{{ section.id }}-{{ option.position }}-{{ forloop.index0 }}"
+              name="{{ option.name }}"
+              value="{{ value | escape }}"
+              form="{{ product_form_id }}"
+              {% if option.selected_value == value %}
+                checked
+              {% endif %}
+            >
+            <label for="{{ section.id }}-{{ option.position }}-{{ forloop.index0 }}">
+              {{ value }}
+            </label>
+          {%- endfor -%}
+        {%- else -%}
+          {%- for value in option.values -%}
+            <input
+              type="radio"
+              id="{{ section.id }}-{{ option.position }}-{{ forloop.index0 }}"
+              name="{{ option.name }}"
+              value="{{ value | escape }}"
+              form="{{ product_form_id }}"
+              {% if value == 'Unselected' %}
+                checked
+              {% endif %}
+            >
+            <label for="{{ section.id }}-{{ option.position }}-{{ forloop.index0 }}">
+              {{ value }}
+            </label>
+          {%- endfor -%}
+        {%- endif -%}
       </fieldset>
     {%- endfor -%}
     <script type="application/json">
@@ -31,13 +59,9 @@
     </script>
   </variant-radios>
   <variant-selects
-    id="variant-selects-{{ section.id }}"
     class="no-js-hidden"
     data-section="{{ section.id }}"
     data-url="{{ product.url }}"
-    {% if update_url == false %}
-      data-update-url="false"
-    {% endif %}
     {{ block.shopify_attributes }}
   >
     {%- for option in product.options_with_values -%}
@@ -52,11 +76,29 @@
             name="options[{{ option.name | escape }}]"
             form="{{ product_form_id }}"
           >
-            {% for value in option.values %}
-              <option value="{{ value | escape }}">
-                {{ value }}
-              </option>
-            {% endfor %}
+            {%- if forloop.first -%}
+              {%- for value in option.values -%}
+                <option
+                  value="{{ value | escape }}"
+                  {% if option.selected_value == value %}
+                    selected="selected"
+                  {% endif %}
+                >
+                  {{ value }}
+                </option>
+              {%- endfor -%}
+            {%- else -%}
+              {%- for value in option.values -%}
+                <option
+                  value="{{ value | escape }}"
+                  {% if value == 'Unselected' %}
+                    selected="selected"
+                  {% endif %}
+                >
+                  {{ value }}
+                </option>
+              {%- endfor -%}
+            {%- endif -%}
           </select>
           {% render 'icon-caret' %}
         </div>
@@ -71,16 +113,9 @@
 
 <noscript class="product-form__noscript-wrapper-{{ section.id }}">
   <div class="product-form__input{% if product.has_only_default_variant %} hidden{% endif %}">
-    <label class="form__label" for="Variants-{{ section.id }}">
-      {{- 'products.product.product_variants' | t -}}
-    </label>
+    <label class="form__label" for="Variants-{{ section.id }}">{{ 'products.product.product_variants' | t }}</label>
     <div class="select">
-      <select
-        name="id"
-        id="Variants-{{ section.id }}"
-        class="select__select"
-        form="{{ product_form_id }}"
-      >
+      <select name="id" id="Variants-{{ section.id }}" class="select__select" form="{{ product_form_id }}">
         {%- for variant in product.variants -%}
           <option
             {% if variant == product.selected_or_first_available_variant %}
@@ -91,29 +126,9 @@
             {% endif %}
             value="{{ variant.id }}"
           >
-            {%- liquid
-              echo variant.title
-              echo variant.price | money | strip_html | prepend: ' - '
-              if variant.available == false
-                echo 'products.product.sold_out' | t | prepend: ' - '
-              endif
-              if variant.quantity_rule.increment > 1
-                echo 'products.product.quantity.multiples_of' | t: quantity: variant.quantity_rule.increment | prepend: ' - '
-              endif
-              if variant.quantity_rule.min > 1
-                echo 'products.product.quantity.minimum_of' | t: quantity: variant.quantity_rule.min | prepend: ' - '
-              endif
-              if variant.quantity_rule.max != null
-                echo 'products.product.quantity.maximum_of' | t: quantity: variant.quantity_rule.max | prepend: ' - '
-              endif
-              # TODO: enable theme-check once `item_count_for_variant` is accepted as valid filter
-              # theme-check-disable
-              assign cart_quantity = cart | item_count_for_variant: variant.id
-              # theme-check-enable
-              if cart_quantity > 0
-                echo 'products.product.quantity.in_cart_html' | t: quantity: cart_quantity | prepend: ' - '
-              endif
-            -%}
+            {{ variant.title }}
+            {%- if variant.available == false %} - {{ 'products.product.sold_out' | t }}{% endif %}
+            - {{ variant.price | money | strip_html }}
           </option>
         {%- endfor -%}
       </select>
